# Lina

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  __init__.py  __main__.py  config.py  download_model.py  lina.fish  lina.py  lina.sh  pyproject.toml  requirements.txt
access/: __init__.py  levels.py  resolver.py
agent/: __init__.py  evaluator.py  executor.py  intent.py  memory.py  planner.py
cache/: command_history.json  knowledge_fragments.json  response_cache.json
ci/: __init__.py  reporter.py  runner.py
core/: AUDIT_REPORT.md  __init__.py  application_resolver.py  bootstrap.py  budget_governor.py  capability_registry.py  cli.py  config_manager.py  consistency_engine.py  context.py  context_budget.py  degradation.py  drift_detector.py  embedding_ranker.py  entity_parser.py  envelope.py  execution_orchestrator.py  execution_trace.py  fact_aggregator.py  fact_extractor.py  fact_pipeline.py  fact_verifier.py  governance.py  human_response.py  i18n.py  integrity_checker.py  intent_lock.py  intent_router.py  lifecycle.py  main_pipeline.py  metrics.py  mode_control.py  model_router.py  orchestrator.py  output.py  passage_extractor.py  pipeline.py  post_processor.py  priority_resolver.py  production_guard.py  (+20 more)
cv/: __init__.py  detector.py  ocr.py  runtime.py  scanner.py
data/: lina-autostart.desktop  lina.desktop  org.lina.Lina.appdata.xml
diagnostics/: __init__.py  autofix.py  classifier.py  control.py  domain_resolver.py  drift.py  engine.py  integration.py  integrity.py  log_engine.py  memory.py  predictor.py  risk_engine.py  root_agent.py  scanner.py  self_healer.py  session.py  snapshot.py  web_intel.py
docs/: ARCHITECTURE_REVIEW.md  COMMANDER_UNIFICATION_PLAN.md  DEAD_CODE_AUDIT.md  MODULE_REFERENCE.md  RAG_GAP_ANALYSIS.md  RAG_PRODUCTION_REDESIGN_RFC.md  RC_EXIT_REPORT.md  api.md  architecture.md  developer_guide.md  operations.md  security_model.md
embeddings/: __init__.py  embedding_model.py  (+1 more)
gui/: app.py  (+14 more)
(+337 files in other folders)
