[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lina-linux"
version = "1.0.0"
description = "Lina — локальный ИИ-помощник для Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lina Team"},
]
keywords = ["ai", "assistant", "linux", "offline", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5"]
voice = ["sounddevice>=0.4"]
tts = ["piper-tts>=1.0"]
full = ["PyQt6>=6.5", "sounddevice>=0.4"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
lina = "lina.core.cli:main"

[project.urls]
Homepage = "https://github.com/lina-linux/lina"
Repository = "https://github.com/lina-linux/lina"
Documentation = "https://github.com/lina-linux/lina/tree/main/docs"
"Bug Tracker" = "https://github.com/lina-linux/lina/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lina*"]

[tool.setuptools.package-data]
lina = [
    "knowledge/**/*.md",
    "diagnostics/trees/*.json",
    "*.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
